--- a/langchain/package.json
+++ b/langchain/package.json
@@ -5,7 +5,10 @@
     "dependencies": {
       "@qdrant/js-client-rest": "^1.6.0",
       "node-fetch": "^2.6.12",
-      "form-data": "^4.0.0"
+      "form-data": "^4.0.0",
+      "mammoth": "^1.4.2",
+      "xlsx": "^0.18.5",
+      "csv-parser": "^3.0"
     }
   }
   
