--- a/orchestrator/package.json
+++ b/orchestrator/package.json
@@ -4,16 +4,22 @@
   "main": "server.js",
   "type": "module",
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
+    "@fastify/swagger": "^9.4.0",
+    "@fastify/swagger-ui": "^5.2.0",
+    "@qdrant/js-client-rest": "^1.12.0",
     "@xenova/transformers": "^2.6.0",
-    "@qdrant/js-client-rest": "^1.6.0",
     "bcrypt": "^5.1.1",
-    "express": "^4.18.2",
+    "fastify": "^5.2.0",
     "node-fetch": "^2.6.12",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "redis": "^4.6.0",
+    "csv-parser": "^3.0.0"
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "NODE_ENV=development node models/test-model.js"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
